iptables/templates/iptables
*filter
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT

-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT

-A INPUT -j LOG --log-prefix "fw reject: "
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j LOG --log-prefix "fw reject: "
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -j LOG --log-prefix "fw reject: "
-A OUTPUT -j REJECT --reject-with icmp-host-prohibited
COMMIT
